[gd_scene load_steps=8 format=3 uid="uid://jxwaqtrcn11h"]

[ext_resource type="Script" uid="uid://bw50u5b4atcvu" path="res://Scripts/Earth.gd" id="1_cbl6o"]
[ext_resource type="Texture2D" uid="uid://bg1opds3ehr18" path="res://Sprites/earth.png" id="2_b5ctf"]
[ext_resource type="Script" uid="uid://b05irphxoyge8" path="res://Scripts/Slingshot.gd" id="3_jb6s3"]
[ext_resource type="Texture2D" uid="uid://dqc0jt88oe0ra" path="res://Sprites/pixel.png" id="4_4fflb"]
[ext_resource type="Texture2D" uid="uid://6cviwxbm16yi" path="res://Sprites/slingshot.png" id="5_ctwuv"]
[ext_resource type="Texture2D" uid="uid://cfu64xk4wnspb" path="res://Sprites/crosshair.png" id="6_2q7co"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hanxx"]
radius = 256.0

[node name="Earth" type="Node2D"]
script = ExtResource("1_cbl6o")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_b5ctf")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_hanxx")

[node name="Slingshot" type="Node2D" parent="."]
script = ExtResource("3_jb6s3")

[node name="Pivot" type="Node2D" parent="Slingshot"]

[node name="Band1" type="Sprite2D" parent="Slingshot/Pivot"]
visible = false
modulate = Color(0.43, 0.321138, 0.2193, 1)
position = Vector2(-233, 0)
scale = Vector2(15, 1e-05)
texture = ExtResource("4_4fflb")
offset = Vector2(0, 0.5)

[node name="Band2" type="Sprite2D" parent="Slingshot/Pivot"]
visible = false
modulate = Color(0.43, 0.321138, 0.2193, 1)
position = Vector2(233, 0)
scale = Vector2(15, 1e-05)
texture = ExtResource("4_4fflb")
offset = Vector2(0, 0.5)

[node name="Saddle" type="Sprite2D" parent="Slingshot/Pivot"]
visible = false
texture = ExtResource("5_ctwuv")

[node name="Band1End" type="Node2D" parent="Slingshot/Pivot/Saddle"]
modulate = Color(0.43, 0.321138, 0.2193, 1)
position = Vector2(-100, 7)

[node name="Band2End" type="Node2D" parent="Slingshot/Pivot/Saddle"]
modulate = Color(0.43, 0.321138, 0.2193, 1)
position = Vector2(100, 7)

[node name="Crosshair" type="Sprite2D" parent="Slingshot"]
visible = false
texture = ExtResource("6_2q7co")

[connection signal="mouse_entered" from="Area2D" to="." method="on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="on_area_2d_mouse_exited"]
